interaccion entre componentes

--- a/api-ejercicios/src/app/components/character-list/character-list.component.html
+++ b/api-ejercicios/src/app/components/character-list/character-list.component.html
@@ -1,6 +1,3 @@
 <div class="characters">
-    <div class="character" *ngFor="let character of characters">
-        <h3>{{character.name}}</h3>
-        <img [src]="character.image" alt="Image Character">
-    </div>
+    <app-character-item *ngFor="let character of characters" [character]="character"></app-character-item>
 </div>
