--- a/api-ejercicios/src/app/components/character-item/character-item.component.html
+++ b/api-ejercicios/src/app/components/character-item/character-item.component.html
@@ -1,4 +1,4 @@
-    <div class="character">
+    <div class="character" (click)="characterSelected.emit(character)" routerLink="/character/{{character?.id}}">
         <h3>{{character?.name}}</h3>
         <img [src]="character?.image" alt="Image Character">
     </div>
