--- a/api-ejercicios/src/app/components/character-list/character-list.component.html
+++ b/api-ejercicios/src/app/components/character-list/character-list.component.html
@@ -1,3 +1,3 @@
 <div class="characters">
-    <app-character-item *ngFor="let character of characters" [character]="character"></app-character-item>
+    <app-character-item *ngFor="let character of characters" [character]="character" (characterSelected)="setCharacter($event)"></app-character-item>
 </div>
